# rust-ethereum-study

./: .env  Cargo.toml  README.md
contracts/: Token.sol
img/: Geedorah(1).drawio  Geedorah.drawio
migrations/2021-05-21-192749_contract/: down.sql  up.sql
scripts/: run-open-eth-dev.sh
src/: context.rs  hold.rs  lib.rs  main.rs  schema.rs
src/models/: contract.rs
truffle/old/: Token.sol
