[package]
name = "rust-ethereum-study"
version = "0.1.0"
authors = ["HG <hgmaxwellking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
ethcontract = "0.11.3"
juniper = "0.15.5"
juniper_warp = "0.6.3"
tokio = { version = "0.2.0" }
warp = "0.2"
web3 = "0.15.0"
